--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack.dev.config.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config webpack.dev.config.js"
   },
   "keywords": [],
   "author": "ltj",
@@ -24,6 +24,8 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
